@@ -791,16 +791,19 @@ escape_string (GString *string)
       if (wc == (gunichar)-1 || wc == (gunichar)-2)  
 	{
 	  gchar *tmp;
-		
-	  g_string_erase (string, p - string->str, 1);
+	  guint pos;
+
+	  pos = p - string->str;
+
 	  /* Emit invalid UTF-8 as hex escapes 
            */
 	  tmp = g_strdup_printf ("\\x%02x", (guint)(guchar)*p);
-	  g_string_insert (string, p - string->str, tmp);
+	  g_string_erase (string, pos, 1);
+	  g_string_insert (string, pos, tmp);
+
+	  p = string->str + (pos + 4); /* Skip over escape sequence */
+
 	  g_free (tmp);
-
-	  p += 4;		/* Skip over escape sequence */
-
 	  continue;
 	}
       if (wc == '\r')
@@ -815,16 +818,19 @@ escape_string (GString *string)
       if (!safe)
 	{
 	  gchar *tmp;
+	  guint pos;
+
+	  pos = p - string->str;
 	  
-	  g_string_erase (string, p - string->str, g_utf8_next_char (p) - p);
 	  /* Largest char we escape is 0x0a, so we don't have to worry
 	   * about 8-digit \Uxxxxyyyy
 	   */
 	  tmp = g_strdup_printf ("\\u%04x", wc); 
-	  g_string_insert (string, p - string->str, tmp);
+	  g_string_erase (string, pos, g_utf8_next_char (p) - p);
+	  g_string_insert (string, pos, tmp);
 	  g_free (tmp);
 
-	  p += 6;		/* Skip over escape sequence */
+	  p = string->str + (pos + 6); /* Skip over escape sequence */
 	}
       else
 	p = g_utf8_next_char (p);
